--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "packages": ["packages/*"],
+    "packages": ["./packages/*"],
     "version": "independent",
     "npmClient": "yarn",
     "useWorkspaces": true
