chore: add changelog, fix publish

--- a/lerna.json
+++ b/lerna.json
@@ -5,5 +5,10 @@
     "packages": ["./packages/*"],
     "version": "independent",
     "npmClient": "yarn",
-    "useWorkspaces": true
+    "useWorkspaces": true,
+    "command": {
+        "publish": {
+            "conventionalCommits": true
+        }
+    }
 }
