chore: fix acess: public

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
     "main": "dist/index.js",
     "module": "dist/core.esm.js",
     "types": "dist/index.d.ts",
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "start": "tsdx watch",
         "build": "tsdx build",
