--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -5,6 +5,9 @@
     "license": "MIT",
     "main": "dist/index.js",
     "types": "dist/babel-plugin/src/index.d.ts",
+    "publishConfig": {
+        "access": "public"
+    },
     "scripts": {
         "clean": "rm -rf dist",
         "prestart": "npm run clean",
