--- a/packages/taddy.macro/package.json
+++ b/packages/taddy.macro/package.json
@@ -1,6 +1,6 @@
 {
     "name": "taddy.macro",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
     "license": "MIT",
     "main": "dist/index.js",
@@ -15,9 +15,9 @@
         "lint": "tsdx lint"
     },
     "dependencies": {
-        "@taddy/babel-plugin": "0.0.0",
+        "@taddy/babel-plugin": "^0.0.1",
         "babel-plugin-macros": "2.8.0",
-        "taddy": "0.0.0"
+        "taddy": "^0.0.1"
     },
     "devDependencies": {
         "@types/babel-plugin-macros": "2.8.2",
