--- a/packages/taddy/package.json
+++ b/packages/taddy/package.json
@@ -1,6 +1,6 @@
 {
     "name": "taddy",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
     "license": "MIT",
     "main": "dist/index.js",
@@ -16,7 +16,7 @@
         "lint": "tsdx lint"
     },
     "dependencies": {
-        "@taddy/core": "0.0.0",
+        "@taddy/core": "^0.0.1",
         "csstype": "^3.0.2"
     },
     "devDependencies": {
