--- a/packages/taddy/package.json
+++ b/packages/taddy/package.json
@@ -13,7 +13,8 @@
         "start": "tsdx watch",
         "build": "tsdx build --transpileOnly",
         "test": "tsdx test",
-        "lint": "tsdx lint"
+        "lint": "tsdx lint",
+        "prepublishOnly": "yarn build"
     },
     "dependencies": {
         "@taddy/core": "^0.0.1",
