examples(cra): fix taddy dependency

--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -6,7 +6,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
-        "taddy.macro": "0.0.0",
+        "taddy.macro": "file:../../packages/taddy.macro",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.3"
