--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "name": "root",
     "workspaces": [
         "examples/*",
-        "packages/*"
+        "packages/*",
+        "website"
     ],
     "license": "MIT",
     "engines": {
@@ -40,6 +41,6 @@
         "lerna": "^3.22.1",
         "tsdx": "^0.13.2",
         "tslib": "^2.0.1",
-        "typescript": "3.9.7"
+        "typescript": "^3.9.7"
     }
 }
