--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -24,6 +24,7 @@
         "@babel/preset-react": "^7.10.4",
         "@babel/preset-typescript": "^7.10.4",
         "@babel/register": "^7.10.5",
+        "@babel/standalone": "^7.11.3",
         "@babel/types": "^7.11.0",
         "@taddy/core": "^0.0.5",
         "babel-helper-evaluate-path": "0.5.0",
