--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "./tsconfig.build.json",
-    "include": ["packages/**/*", "types"],
+    "include": ["packages/**/*", "examples/**/*", "website/**/*", "types"],
     "compilerOptions": {
         "allowJs": false,
         "noImplicitAny": false,
