feat(babel-plugin): change caching strategy

--- a/examples/parcel/.babelrc
+++ b/examples/parcel/.babelrc
@@ -1,4 +1,6 @@
 {
     "presets": ["@babel/react"],
-    "plugins": [["@taddy", {"outputOptions": {"relativeEntryPath": true}}]]
+    "plugins": [
+        ["@taddy", {"outputOptions": {"cssFilepath": "taddy.cache.css"}}]
+    ]
 }
