feat(babel-plugin): fix website build

--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -5,7 +5,7 @@
     "babelMacros": {
         "taddy": {
             "outputOptions": {
-                "cssFilepath": "./src/taddy.cache.css"
+                "cssFilepath": "./src/taddy.css"
             }
         }
     },
