feat(website): update home page

--- a/website/vercel.json
+++ b/website/vercel.json
@@ -1,11 +1,5 @@
 {
     "version": 2,
     "name": "taddy",
-    "alias": ["taddy.dev", "taddy"],
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@now/static-build"
-        }
-    ]
+    "alias": ["taddy.dev", "taddy"]
 }
