--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -8,6 +8,10 @@
     "publishConfig": {
         "access": "public"
     },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/lttb/taddy.git"
+    },
     "scripts": {
         "clean": "rm -rf dist",
         "prestart": "npm run clean",
