--- a/packages/taddy.macro/package.json
+++ b/packages/taddy.macro/package.json
@@ -8,6 +8,10 @@
     "publishConfig": {
         "access": "public"
     },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/lttb/taddy.git"
+    },
     "scripts": {
         "start": "tsdx watch",
         "build": "tsdx build --target node --transpileOnly",
