--- a/website/package.json
+++ b/website/package.json
@@ -10,19 +10,23 @@
     },
     "dependencies": {
         "@babel/standalone": "7.11.3",
-        "@taddy/babel-plugin": "^0.0.15",
         "@reatom/core": "^1.1.5",
         "@reatom/react": "^1.1.4",
+        "@taddy/babel-plugin": "^0.0.15",
+        "filer": "1.2.0",
+        "history": "5.0.0",
+        "lz-string": "1.4.4",
         "next": "9.5.2",
+        "qhistory": "1.1.0",
+        "qs": "6.9.4",
         "react": "16.13.1",
         "react-ace": "9.1.3",
         "react-dom": "16.13.1",
         "taddy": "^0.0.5",
-        "filer": "1.2.0",
-        "typescript": "^3.9.7",
-        "lz-string": "1.4.4",
-        "history": "5.0.0",
-        "qhistory": "1.1.0",
-        "qs": "6.9.4"
+        "typescript": "^3.9.7"
+    },
+    "devDependencies": {
+        "@types/node": "^14.6.0",
+        "@types/react": "^16.9.46"
     }
 }
