fix: fix vercel build

--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "taddy.dev",
+    "name": "@taddy/website",
     "description": "taddy documentation website",
     "version": "0.0.0",
     "private": true,
