--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "prettier": "2.0.5"
     },
     "devDependencies": {
+        "@babel/core": "7.11.1",
         "@babel/preset-env": "7.9.6",
         "@babel/preset-typescript": "7.9.0",
         "husky": "^4.2.5",
