feat(taddy): fix zero values resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,13 @@
         "typeRoots": ["node_modules/@types"],
 
         "baseUrl": ".",
+        "rootDir": ".",
 
         "paths": {
-            "@taddy/babel-plugin": ["./packages/babel-plugin/src"],
-            "@taddy/core": ["./packages/core/src"],
-            "taddy": ["./packages/taddy/src"],
-            "taddy.macro": ["./packages/taddy.macro/src"]
+            "@taddy/babel-plugin": ["packages/babel-plugin/src"],
+            "@taddy/core": ["packages/core/src"],
+            "taddy": ["packages/taddy/src"],
+            "taddy.macro": ["packages/taddy.macro/src"]
         }
     }
 }
