--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "packages": ["./packages/*"],
+    "packages": ["./packages/*", "website"],
     "version": "independent",
     "npmClient": "yarn",
     "useWorkspaces": true,
