--- a/website/package.json
+++ b/website/package.json
@@ -26,7 +26,13 @@
         "typescript": "^3.9.7"
     },
     "devDependencies": {
+        "@mdx-js/loader": "^1.6.16",
+        "@next/mdx": "^9.5.2",
         "@types/node": "^14.6.0",
-        "@types/react": "^16.9.46"
+        "@types/react": "^16.9.46",
+        "imagemin-svgo": "^8.0.0",
+        "next-compose-plugins": "2.2.0",
+        "next-optimized-images": "2.6.2",
+        "svg-sprite-loader": "^5.0.0"
     }
 }
