--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "resolutions": {
         "@typescript-eslint/eslint-plugin": "3.9.0",
-        "prettier": "2.0.5"
+        "prettier": "^2.0.5"
     },
     "devDependencies": {
         "@babel/core": "7.11.1",
@@ -45,6 +45,7 @@
         "lerna": "^3.22.1",
         "tsdx": "^0.13.2",
         "tslib": "^2.0.1",
-        "typescript": "^3.9.7"
+        "typescript": "^3.9.7",
+        "babel-jest": "^26.3.0"
     }
 }
