--- a/packages/babel-plugin/tsconfig.json
+++ b/packages/babel-plugin/tsconfig.json
@@ -2,7 +2,11 @@
     "extends": "../../tsconfig.json",
     "include": ["src"],
     "compilerOptions": {
+        "composite": true,
         "outDir": "dist",
-        "baseUrl": "."
-    }
+
+        "baseUrl": ".",
+        "rootDir": "src"
+    },
+    "references": [{"path": "../taddy"}, {"path": "../core"}]
 }
