--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,7 +14,7 @@
         "url": "git+https://github.com/lttb/taddy.git"
     },
     "scripts": {
-        "start": "tsdx watch",
+        "start": "tsc --watch",
         "build": "tsdx build",
         "test": "tsdx test",
         "lint": "tsdx lint",
