--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,6 +2,10 @@
     "extends": "../../tsconfig.json",
     "include": ["src"],
     "compilerOptions": {
-        "outDir": "dist"
+        "composite": true,
+        "outDir": "dist",
+
+        "baseUrl": ".",
+        "rootDir": "src"
     }
 }
