--- a/packages/taddy/package.json
+++ b/packages/taddy/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "main": "dist/index.js",
     "module": "dist/taddy.esm.js",
-    "types": "dist/taddy/src/index.d.ts",
+    "types": "dist/index.d.ts",
     "publishConfig": {
         "access": "public"
     },
@@ -14,7 +14,7 @@
         "url": "git+https://github.com/lttb/taddy.git"
     },
     "scripts": {
-        "start": "tsdx watch",
+        "start": "tsc --watch",
         "build": "tsdx build --transpileOnly",
         "test": "tsdx test",
         "lint": "tsdx lint",
