--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,19 @@
 {
     "extends": "./tsconfig.build.json",
-    "include": ["packages/**/*", "examples/**/*", "website/**/*", "types"],
-    "exclude": ["**/dist/**", "**/node_modules/**"],
+    "include": ["packages/**/*", "examples/**/*"],
     "compilerOptions": {
-        "allowJs": false,
-        "noImplicitAny": false,
+        "incremental": true,
 
         "typeRoots": ["node_modules/@types"],
 
         "baseUrl": ".",
-        "rootDir": ".",
+        "outDir": "dist",
 
         "paths": {
-            "@taddy/babel-plugin": ["packages/babel-plugin/src"],
-            "@taddy/core": ["packages/core/src"],
             "taddy": ["packages/taddy/src"],
-            "taddy.macro": ["packages/taddy.macro/src"]
+            "taddy.macro": ["packages/taddy.macro/src"],
+            "@taddy/core": ["packages/core/src"],
+            "@taddy/babel-plugin": ["packages/babel-plugin/src"]
         }
     }
 }
