--- a/website/package.json
+++ b/website/package.json
@@ -21,7 +21,8 @@
         "react": "16.13.1",
         "react-ace": "9.1.3",
         "react-dom": "16.13.1",
-        "typescript": "^3.9.7"
+        "typescript": "^3.9.7",
+        "postcss-js": "2.0.3"
     },
     "devDependencies": {
         "@mdx-js/loader": "^1.6.16",
