--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "name": "taddy-parcel-example",
+    "name": "@taddy-example/parcel",
     "version": "0.0.0",
     "main": "index.js",
     "license": "MIT",
