--- a/website/package.json
+++ b/website/package.json
@@ -22,7 +22,8 @@
         "react-ace": "9.1.3",
         "react-dom": "16.13.1",
         "typescript": "^3.9.7",
-        "postcss-js": "2.0.3"
+        "postcss-js": "2.0.3",
+        "prism-react-renderer": "1.1.1"
     },
     "devDependencies": {
         "@mdx-js/loader": "^1.6.16",
