--- a/website/package.json
+++ b/website/package.json
@@ -32,6 +32,7 @@
         "imagemin-svgo": "^8.0.0",
         "next-compose-plugins": "2.2.0",
         "next-optimized-images": "2.6.2",
+        "next-transpile-modules": "4.1.0",
         "svg-sprite-loader": "^5.0.0",
         "webpack": "^4.0.0"
     }
