--- a/package.json
+++ b/package.json
@@ -34,18 +34,19 @@
         "bracketSpacing": false
     },
     "resolutions": {
-        "@typescript-eslint/eslint-plugin": "3.9.0",
-        "prettier": "^2.0.5"
+        "@typescript-eslint/eslint-plugin": "4.9.0",
+        "prettier": "^2.2.1",
+        "typescript": "^4.1.2"
     },
     "devDependencies": {
-        "@babel/core": "7.11.1",
-        "@babel/preset-env": "7.9.6",
-        "@babel/preset-typescript": "7.9.0",
+        "@babel/core": "7.11.6",
+        "@babel/preset-env": "7.12.1",
+        "@babel/preset-typescript": "7.10.4",
         "husky": "^4.2.5",
         "lerna": "^3.22.1",
-        "tsdx": "^0.13.2",
+        "tsdx": "^0.14.1",
         "tslib": "^2.0.1",
-        "typescript": "^3.9.7",
+        "typescript": "^4.1.2",
         "babel-jest": "^26.3.0"
     }
 }
