--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -22,6 +22,10 @@
         "prepublishOnly": "yarn build"
     },
     "dependencies": {
+        "@types/node": "12.12.2",
+        "@types/find-cache-dir": "3.2.0",
+        "@types/mkdirp": "1.0.1",
+        "@types/string-hash": "1.1.1",
         "@babel/core": "^7.11.1",
         "@babel/helper-module-imports": "^7.10.1",
         "@babel/preset-env": "^7.10.4",
@@ -44,9 +48,6 @@
         "ts-morph": "7.3.0"
     },
     "devDependencies": {
-        "@types/find-cache-dir": "3.2.0",
-        "@types/mkdirp": "1.0.1",
-        "@types/string-hash": "1.1.1",
         "tslib": "^2.0.1"
     }
 }
