--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
         "lerna": "6.5.1",
-        "typescript": "4.9.5",
-        "vitest": "^0.29.2"
+        "typescript": "4.9.5"
     }
 }
