--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -9,31 +9,31 @@
         "start": "next start"
     },
     "dependencies": {
-        "@babel/standalone": "7.11.3",
-        "@reatom/core": "^1.1.5",
-        "@reatom/react": "^1.1.4",
-        "filer": "1.2.0",
-        "history": "5.0.0",
-        "lz-string": "1.4.4",
-        "next": "9.5.2",
+        "@babel/standalone": "7.21.2",
+        "@reatom/core": "^3.1.23",
+        "@reatom/react": "^2.0.19",
+        "filer": "1.4.1",
+        "history": "5.3.0",
+        "lz-string": "1.5.0",
+        "next": "13.2.4",
+        "postcss-js": "4.0.1",
         "qhistory": "1.1.0",
-        "qs": "6.9.4",
-        "react": "16.13.1",
+        "qs": "6.11.1",
+        "react": "18.2.0",
         "react-ace": "9.1.3",
-        "react-dom": "16.13.1",
-        "typescript": "^4.1.2",
-        "postcss-js": "2.0.3"
+        "react-dom": "18.2.0",
+        "typescript": "^4.1.2"
     },
     "devDependencies": {
-        "@mdx-js/loader": "^1.6.16",
-        "@next/mdx": "^9.5.2",
-        "@types/node": "^14.6.0",
-        "@types/react": "^16.9.46",
-        "imagemin-svgo": "^8.0.0",
-        "next-compose-plugins": "2.2.0",
+        "@mdx-js/loader": "^2.3.0",
+        "@next/mdx": "^13.2.4",
+        "@types/node": "^18.15.0",
+        "@types/react": "^18.0.28",
+        "imagemin-svgo": "^10.0.1",
+        "next-compose-plugins": "2.2.1",
         "next-optimized-images": "2.6.2",
-        "next-transpile-modules": "4.1.0",
-        "svg-sprite-loader": "^5.0.0",
-        "webpack": "^4.0.0"
+        "next-transpile-modules": "10.0.0",
+        "svg-sprite-loader": "^6.0.11",
+        "webpack": "^5.76.1"
     }
 }
