--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -10,8 +10,9 @@
     },
     "dependencies": {
         "@babel/standalone": "7.21.2",
-        "@reatom/core": "^3.1.23",
-        "@reatom/react": "^2.0.19",
+        "@mdx-js/react": "2.3.0",
+        "@reatom/core": "1.1.5",
+        "@reatom/react": "1.1.5",
         "filer": "1.4.1",
         "history": "5.3.0",
         "lz-string": "1.5.0",
@@ -19,6 +20,7 @@
         "postcss-js": "4.0.1",
         "qhistory": "1.1.0",
         "qs": "6.11.1",
+        "prettier": "2.8.4",
         "react": "18.2.0",
         "react-ace": "9.1.3",
         "react-dom": "18.2.0",
