--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "scripts": {
         "lerna": "lerna",
         "start": "lerna run start --stream --parallel --no-private",
+        "lint": "eslint --ext .js,.ts,.tsx",
         "test": "lerna run test",
         "build": "lerna run build --parallel --no-private",
         "prewebsite:build": "yarn build",
@@ -26,24 +27,26 @@
             "pre-commit": "npm run lint"
         }
     },
-    "prettier": {
-        "printWidth": 80,
-        "semi": true,
-        "singleQuote": true,
-        "trailingComma": "all",
-        "bracketSpacing": false
-    },
     "devDependencies": {
         "@babel/core": "7.21.0",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
         "@types/jest": "^29.4.0",
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
         "babel-jest": "29.5.0",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.7.0",
+        "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "happy-dom": "^8.9.0",
         "husky": "8.0.3",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
         "lerna": "6.5.1",
+        "prettier": "2.8.4",
         "typescript": "4.9.5"
     }
 }
