--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "lerna": "lerna",
         "start": "lerna run start --stream --parallel --no-private",
         "lint": "eslint --ext .js,.ts,.tsx",
-        "test": "lerna run test",
+        "test": "jest",
         "build": "lerna run build --parallel --no-private",
         "prewebsite:build": "yarn build",
         "website:build": "yarn lerna exec --scope @taddy/website next build",
