--- a/taddy.macro/package.json
+++ b/taddy.macro/package.json
@@ -12,9 +12,8 @@
     },
     "scripts": {
         "start": "tsc --watch",
-        "build": "tsdx build --target node --transpileOnly",
-        "test": "tsdx test",
-        "lint": "tsdx lint",
+        "test": "jest",
+        "lint": "eslint .",
         "prepublishOnly": "yarn build"
     },
     "dependencies": {
