--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -10,6 +10,8 @@
     },
     "dependencies": {
         "@babel/standalone": "7.21.2",
+        "@babel/preset-react": "7.18.6",
+        "@babel/preset-typescript": "7.21.0",
         "@mdx-js/react": "2.3.0",
         "@reatom/core": "1.1.5",
         "@reatom/react": "1.1.5",
@@ -18,12 +20,14 @@
         "lz-string": "1.5.0",
         "next": "13.2.4",
         "postcss-js": "4.0.1",
+        "prettier": "2.8.4",
         "qhistory": "1.1.0",
         "qs": "6.11.1",
-        "prettier": "2.8.4",
         "react": "18.2.0",
         "react-ace": "9.1.3",
         "react-dom": "18.2.0",
+        "sharp": "^0.31.3",
+        "taddy": "*",
         "typescript": "^4.1.2"
     },
     "devDependencies": {
