feat(taddy/babel-plugin): update tsconfig

--- a/@taddy/babel-plugin/tsconfig.json
+++ b/@taddy/babel-plugin/tsconfig.json
@@ -1,12 +1,8 @@
 {
     "extends": "../../tsconfig.json",
-    "include": ["src"],
     "compilerOptions": {
-        "composite": true,
         "outDir": "dist",
 
-        "baseUrl": ".",
-        "rootDir": "src"
-    },
-    "references": [{"path": "../taddy"}, {"path": "../core"}]
+        "baseUrl": "."
+    }
 }
