--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -3,8 +3,6 @@
     "version": "0.0.28",
     "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
     "license": "MIT",
-    "main": "dist/index.js",
-    "types": "dist/babel-plugin/src/index.d.ts",
     "publishConfig": {
         "access": "public"
     },
@@ -21,7 +19,6 @@
         "prepublishOnly": "yarn build"
     },
     "dependencies": {
-        "@babel/core": "^7.11.1",
         "@babel/helper-module-imports": "^7.10.1",
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-react": "^7.18.6",
@@ -30,10 +27,6 @@
         "@babel/standalone": "^7.21.2",
         "@babel/types": "^7.11.0",
         "@taddy/core": "^0.0.13",
-        "@types/find-cache-dir": "3.2.1",
-        "@types/mkdirp": "2.0.0",
-        "@types/node": "18.15.0",
-        "@types/string-hash": "1.1.1",
         "babel-helper-evaluate-path": "0.5.0",
         "common-tags": "1.8.2",
         "find-cache-dir": "4.0.0",
@@ -45,5 +38,12 @@
         "string-hash": "1.1.3",
         "taddy": "^0.0.16",
         "ts-morph": "17.0.1"
+    },
+    "devDependencies": {
+        "@types/find-cache-dir": "3.2.1",
+        "@types/mkdirp": "2.0.0",
+        "@types/node": "18.15.0",
+        "@types/string-hash": "1.1.1",
+        "@types/babel__standalone": "^7.1.4"
     }
 }
