--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -9,12 +9,10 @@
         "start": "next start"
     },
     "dependencies": {
-        "@babel/standalone": "7.21.2",
-        "@babel/preset-react": "7.18.6",
-        "@babel/preset-typescript": "7.21.0",
         "@mdx-js/react": "2.3.0",
         "@reatom/core": "1.1.5",
         "@reatom/react": "1.1.5",
+        "@taddy/babel-plugin": "*",
         "filer": "1.4.1",
         "history": "5.3.0",
         "lz-string": "1.5.0",
@@ -33,6 +31,7 @@
     "devDependencies": {
         "@mdx-js/loader": "^2.3.0",
         "@next/mdx": "^13.2.4",
+        "@types/babel__standalone": "^7.1.4",
         "@types/node": "^18.15.0",
         "@types/react": "^18.0.28",
         "imagemin-svgo": "^10.0.1",
