feat: initial react-native support

--- a/@examples/parcel/package.json
+++ b/@examples/parcel/package.json
@@ -10,7 +10,8 @@
     },
     "dependencies": {
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "taddy": "*"
     },
     "devDependencies": {
         "@babel/core": "^7.11.1",
