--- a/@examples/parcel/tsconfig.json
+++ b/@examples/parcel/tsconfig.json
@@ -1,14 +1,3 @@
 {
-    "extends": "../../tsconfig.json",
-    "exclude": ["dist"],
-    "compilerOptions": {
-        "baseUrl": ".",
-        "outDir": "dist",
-        "noImplicitAny": false,
-        "moduleResolution": "classic",
-        "esModuleInterop": false,
-        "target": "ES2020",
-        "module": "ES2020",
-        "allowJs": false
-    }
+    "extends": "../../tsconfig.json"
 }
