--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,7 +8,7 @@
         "esModuleInterop": true,
         "experimentalDecorators": false,
         "importHelpers": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "lib": ["dom", "dom.iterable", "esnext"],
         "moduleResolution": "node",
         "noFallthroughCasesInSwitch": false,
