chore(docs, examples): update package.json

--- a/@docs/assets/package.json
+++ b/@docs/assets/package.json
@@ -1,6 +1,6 @@
 {
+    "private": true,
     "name": "@docs/assets",
     "description": "taddy documentation assets",
-    "version": "0.0.0",
-    "private": true
+    "version": "0.0.0"
 }
