--- a/@examples/react-native-expo/package.json
+++ b/@examples/react-native-expo/package.json
@@ -1,4 +1,5 @@
 {
+    "private": true,
     "name": "react-native-expo",
     "version": "1.0.0",
     "scripts": {
@@ -18,6 +19,5 @@
     "devDependencies": {
         "@babel/core": "^7.20.0",
         "@types/react-native": "0.71.3"
-    },
-    "private": true
+    }
 }
