chore(babel-config): update compilation

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -25,6 +25,7 @@
         "strictPropertyInitialization": true,
         "stripInternal": true,
         "target": "ES2022",
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "skipLibCheck": true
     }
 }
