--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -14,6 +14,8 @@
         "clean": "rm -rf dist",
         "prestart": "npm run clean",
         "start": "tsc --watch",
+        "prebuild": "npm run clean",
+        "build": "tsc",
         "test": "jest",
         "lint": "eslint .",
         "prepublishOnly": "yarn build"
