--- a/@taddy/babel-plugin/tsconfig.json
+++ b/@taddy/babel-plugin/tsconfig.json
@@ -1,8 +1,11 @@
 {
     "extends": "../../tsconfig.json",
+    "include": ["src"],
     "compilerOptions": {
         "outDir": "dist",
 
-        "baseUrl": "."
+        "baseUrl": ".",
+        "rootDir": "src",
+        "module": "CommonJS"
     }
 }
