--- a/@taddy/babel-plugin/tsconfig.json
+++ b/@taddy/babel-plugin/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.json",
     "include": ["src"],
     "compilerOptions": {
-        "outDir": "dist",
+        "outDir": "lib",
 
         "baseUrl": ".",
         "rootDir": "src",
