--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@babel/core": "7.21.0",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
+        "@rollup/plugin-typescript": "^11.0.0",
         "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
         "@typescript-eslint/parser": "^5.54.1",
@@ -43,6 +44,8 @@
         "jest-environment-jsdom": "^29.5.0",
         "lerna": "6.5.1",
         "prettier": "2.8.4",
+        "rollup": "^3.19.1",
+        "rollup-plugin-copy": "^3.4.0",
         "typescript": "4.9.5"
     }
 }
