--- a/taddy/package.json
+++ b/taddy/package.json
@@ -13,6 +13,8 @@
     "scripts": {
         "start": "tsc --watch",
         "test": "vitest test",
+        "prebuild": "rm -rf lib",
+        "build": "rollup -c --bundleConfigAsCjs",
         "prepublishOnly": "yarn build"
     },
     "dependencies": {
