--- a/@taddy/babel-plugin/tsconfig.json
+++ b/@taddy/babel-plugin/tsconfig.json
@@ -5,7 +5,6 @@
         "outDir": "lib",
 
         "baseUrl": ".",
-        "rootDir": "src",
-        "module": "CommonJS"
+        "rootDir": "src"
     }
 }
