--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@babel/core": "7.21.0",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
+        "@happy-dom/jest-environment": "^8.9.0",
         "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
         "@typescript-eslint/parser": "^5.54.1",
