--- a/@taddy/core/package.json
+++ b/@taddy/core/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "@taddy/core",
-    "version": "0.0.13",
-    "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
-    "license": "MIT",
-    "publishConfig": {
-        "access": "public"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/lttb/taddy.git"
-    },
-    "scripts": {
-        "start": "tsc --watch",
-        "test": "jest",
-        "lint": "eslint .",
-        "prebuild": "rm -rf lib",
-        "build": "rollup -c --bundleConfigAsCjs",
-        "prepublishOnly": "yarn build"
-    },
-    "dependencies": {
-        "custom-hash": "0.9.0"
-    }
+  "name": "@taddy/core",
+  "version": "0.1.0-alpha.0",
+  "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lttb/taddy.git"
+  },
+  "scripts": {
+    "start": "tsc --watch",
+    "test": "jest",
+    "lint": "eslint .",
+    "prebuild": "rm -rf lib",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "prepublishOnly": "yarn build"
+  },
+  "dependencies": {
+    "custom-hash": "0.9.0"
+  }
 }
