--- a/taddy/package.json
+++ b/taddy/package.json
@@ -1,24 +1,24 @@
 {
-    "name": "taddy",
-    "version": "0.0.16",
-    "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
-    "license": "MIT",
-    "publishConfig": {
-        "access": "public"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/lttb/taddy.git"
-    },
-    "scripts": {
-        "start": "tsc --watch",
-        "test": "vitest test",
-        "prebuild": "rm -rf lib",
-        "build": "rollup -c --bundleConfigAsCjs",
-        "prepublishOnly": "yarn build"
-    },
-    "dependencies": {
-        "@taddy/core": "^0.0.13",
-        "csstype": "3.1.1"
-    }
+  "name": "taddy",
+  "version": "0.1.0-alpha.0",
+  "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lttb/taddy.git"
+  },
+  "scripts": {
+    "start": "tsc --watch",
+    "test": "vitest test",
+    "prebuild": "rm -rf lib",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "prepublishOnly": "yarn build"
+  },
+  "dependencies": {
+    "@taddy/core": "^0.1.0-alpha.0",
+    "csstype": "3.1.1"
+  }
 }
