chore(babel-plugin): fix build

--- a/@taddy/babel-plugin/tsconfig.json
+++ b/@taddy/babel-plugin/tsconfig.json
@@ -1,10 +1,8 @@
 {
     "extends": "../../tsconfig.json",
-    "include": ["src"],
     "compilerOptions": {
         "outDir": "lib",
 
-        "baseUrl": ".",
-        "rootDir": "src"
+        "baseUrl": "."
     }
 }
