chore: fix docs and examples dependencies

--- a/@examples/react-native-expo/package.json
+++ b/@examples/react-native-expo/package.json
@@ -14,7 +14,7 @@
         "expo-status-bar": "~1.4.4",
         "react": "18.2.0",
         "react-native": "0.71.3",
-        "taddy": "*"
+        "taddy": "^0.1.0-alpha.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
