--- a/@examples/parcel/package.json
+++ b/@examples/parcel/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "taddy": "*"
+        "taddy": "^0.1.0-alpha.0"
     },
     "devDependencies": {
         "@babel/core": "^7.11.1",
