--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
         "@happy-dom/jest-environment": "^8.9.0",
+        "@jest/globals": "29.5.0",
         "@rollup/plugin-typescript": "^11.0.0",
         "@types/jest": "^29.4.0",
         "@typescript-eslint/eslint-plugin": "^5.54.1",
