--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -12,7 +12,7 @@
         "@mdx-js/react": "2.3.0",
         "@reatom/core": "1.1.5",
         "@reatom/react": "1.1.5",
-        "@taddy/babel-plugin": "file:../../@taddy/babel-plugin",
+        "@taddy/babel-plugin": "^0.1.0-alpha.0",
         "filer": "1.4.1",
         "history": "5.3.0",
         "lz-string": "1.5.0",
@@ -25,7 +25,7 @@
         "react-ace": "9.1.3",
         "react-dom": "18.2.0",
         "sharp": "^0.31.3",
-        "taddy": "file:../../taddy",
+        "taddy": "^0.1.0-alpha.0",
         "typescript": "^4.1.2"
     },
     "devDependencies": {
