--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
             "@docs/*",
             "taddy",
             "taddy.macro"
+        ],
+        "nohoist": [
+            "tslib"
         ]
     },
     "license": "MIT",
@@ -29,6 +32,7 @@
     },
     "devDependencies": {
         "@babel/core": "7.21.0",
+        "@babel/cli": "^7.21.0",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
         "@happy-dom/jest-environment": "^8.9.0",
