feat(babel-plugin): update snapshots and tests

--- a/taddy/package.json
+++ b/taddy/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "start": "tsc --watch",
-        "test": "vitest test",
+        "test": "jest test",
         "prebuild": "rm -rf lib",
         "build": "rollup -c --bundleConfigAsCjs"
     },
