feat(examples/remix): initial example

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
             "taddy.macro"
         ],
         "nohoist": [
-            "tslib"
+            "tslib",
+            "**/@remix-run/**"
         ]
     },
     "license": "MIT",
