feat: make it work with vue jsx

--- a/@examples/nuxt/package.json
+++ b/@examples/nuxt/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "nuxt": "^3.3.1",
-        "@taddy/babel-plugin": "^0.1.0-alpha.0"
+        "@taddy/babel-plugin": "^0.1.0-alpha.0",
+        "@taddy/vite-plugin-vue-taddy": "^0.1.0-alpha.0"
     }
 }
