chore: upgrade to typescript 5

--- a/@examples/react-native-expo/tsconfig.json
+++ b/@examples/react-native-expo/tsconfig.json
@@ -1,4 +1,7 @@
 {
-    "extends": "expo/tsconfig.base",
+    "extends": [
+        "expo/tsconfig.base",
+        "../../tsconfig.json"
+    ],
     "compilerOptions": {}
 }
