--- a/@docs/website/package.json
+++ b/@docs/website/package.json
@@ -25,8 +25,7 @@
         "react-ace": "9.1.3",
         "react-dom": "18.2.0",
         "sharp": "^0.31.3",
-        "taddy": "^0.1.0-alpha.0",
-        "typescript": "^4.1.2"
+        "taddy": "^0.1.0-alpha.0"
     },
     "devDependencies": {
         "@mdx-js/loader": "^2.3.0",
