--- a/@examples/remix/package.json
+++ b/@examples/remix/package.json
@@ -29,8 +29,7 @@
         "@taddy/esbuild-plugin": "^0.1.0-alpha.0",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.8",
-        "eslint": "^8.27.0",
-        "typescript": "^4.8.4"
+        "eslint": "^8.27.0"
     },
     "engines": {
         "node": ">=14"
