--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "pub:version": "yarn pub"
     },
     "devDependencies": {
-        "@babel/core": "7.21.0",
         "@babel/cli": "^7.21.0",
+        "@babel/core": "7.21.0",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
         "@happy-dom/jest-environment": "^8.9.0",
@@ -56,6 +56,7 @@
         "prettier": "2.8.4",
         "rollup": "^3.19.1",
         "rollup-plugin-copy": "^3.4.0",
-        "typescript": "4.9.5"
+        "rollup-plugin-node-externals": "^5.1.2",
+        "typescript": "5.0.2"
     }
 }
