--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -4,6 +4,18 @@
     "author": "Kenzhaev Artur <kenzhaev.artur@gmail.com>",
     "license": "MIT",
     "main": "lib/index.cjs",
+    "module": "lib/index.js",
+    "exports": {
+        "./package.json": "./package.json",
+        ".": {
+            "import": "./lib/index.js",
+            "require": "./lib/index.cjs"
+        },
+        "./macro": {
+            "import": "./lib/macro.js",
+            "require": "./lib/macro.cjs"
+        }
+    },
     "publishConfig": {
         "access": "public"
     },
@@ -28,18 +40,19 @@
         "@babel/standalone": "^7.21.2",
         "@babel/types": "^7.11.0",
         "@taddy/core": "^0.1.0-alpha.0",
-        "babel-helper-evaluate-path": "0.5.0",
-        "common-tags": "1.8.2",
-        "find-cache-dir": "4.0.0",
-        "lilconfig": "2.1.0",
-        "postcss": "8.4.21",
-        "postcss-js": "4.0.1",
-        "resolve": "1.22.1",
-        "string-hash": "1.1.3",
+        "babel-helper-evaluate-path": "^0.5.0",
+        "common-tags": "^1.8.2",
+        "convert-source-map": "^2.0.0",
+        "find-cache-dir": "^4.0.0",
+        "lilconfig": "^2.1.0",
+        "postcss": "^8.4.21",
+        "postcss-js": "^4.0.1",
+        "resolve": "^1.22.1",
+        "string-hash": "^1.1.3",
         "sync-rpc": "^1.3.6",
-        "source-map": "0.7.4",
+        "source-map": "^0.7.4",
         "taddy": "^0.1.0-alpha.0",
-        "ts-morph": "17.0.1",
+        "ts-morph": "^17.0.1",
         "workerpool": "^6.4.0"
     },
     "devDependencies": {
