--- a/@taddy/core/package.json
+++ b/@taddy/core/package.json
@@ -5,7 +5,6 @@
     "license": "MIT",
     "main": "lib/index.cjs",
     "module": "lib/index.js",
-    "types": "lib/index.d.ts",
     "publishConfig": {
         "access": "public"
     },
@@ -14,10 +13,10 @@
         "url": "git+https://github.com/lttb/taddy.git"
     },
     "scripts": {
-        "start": "tsc --watch",
-        "test": "jest",
-        "lint": "eslint .",
-        "prebuild": "rm -rf lib",
-        "build": "rollup -c --bundleConfigAsCjs"
+        "clean": "rm -rf lib",
+        "start": "yarn compile --watch",
+        "compile": "rollup -c --bundleConfigAsCjs",
+        "prebuild": "yarn clean",
+        "build": "yarn compile"
     }
 }
