--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -24,5 +24,6 @@
         "target": "ESNext",
         "downlevelIteration": true,
         "skipLibCheck": true
-    }
+    },
+    "exclude": ["**/node_modules/**"]
 }
