--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -5,17 +5,6 @@
     "license": "MIT",
     "main": "lib/index.cjs",
     "module": "lib/index.js",
-    "exports": {
-        "./package.json": "./package.json",
-        ".": {
-            "import": "./lib/index.js",
-            "require": "./lib/index.cjs"
-        },
-        "./macro": {
-            "import": "./lib/macro.js",
-            "require": "./lib/macro.cjs"
-        }
-    },
     "publishConfig": {
         "access": "public"
     },
@@ -26,8 +15,10 @@
     },
     "scripts": {
         "clean": "rm -rf lib",
-        "start": "yarn compile --watch",
+        "check:ts": "tsc --noEmit",
         "compile": "rollup -c --bundleConfigAsCjs",
+        "prestart": "yarn clean",
+        "start": "yarn compile --watch",
         "prebuild": "yarn clean",
         "build": "yarn compile"
     },
