--- a/@taddy/babel-plugin/package.json
+++ b/@taddy/babel-plugin/package.json
@@ -43,8 +43,7 @@
         "sync-rpc": "^1.3.6",
         "source-map": "^0.7.4",
         "taddy": "^0.1.0-alpha.0",
-        "ts-morph": "^17.0.1",
-        "workerpool": "^6.4.0"
+        "ts-morph": "^17.0.1"
     },
     "devDependencies": {
         "@types/babel__standalone": "^7.1.4",
