--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,15 @@ jobs:
 
         steps:
             - name: Begin CI...
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Use Node 16
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.x
 
             - name: Use cached node_modules
-              uses: actions/cache@v1
+              uses: actions/cache@v3
               with:
                   path: node_modules
                   key: nodeModules-${{ hashFiles('**/yarn.lock') }}
@@ -37,6 +37,6 @@ jobs:
                   CI: true
 
             - name: Test
-              run: yarn test --ci --coverage --maxWorkers=2
+              run: yarn test --ci --coverage
               env:
                   CI: true
